Thu Jun  4 14:06:06 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * NEWS:

          News updates for next release. 
        
Mon Jun  1 20:29:12 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * CIDLC/cidlc.cpp:
        * MPC/config/ciaocidldefaults.mpb:

          Added two options:  --suppress-lem and --suppress-svnt, which will
          suppress generation of the local executor mapping and servant code,
          respectively.

Fri May 29 00:48:01 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:

          Some tweaks to the generated _svnt files to properly compile with
          the changes introduced in the previous commit .

Thu May 28 19:07:27 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ExecutorMappingGenerator.cpp:

          More tweaks to the application of the command line option
          added in

          Thu May 28 14:01:45 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

Thu May 28 18:52:27 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ExecutorMappingGenerator.cpp:

          Applied check for the command line option added in

          Thu May 28 14:01:45 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

          in several places needed for correct generation of
          the executor IDL file.

Thu May 28 14:01:45 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp:

          Fixed cut/paste error in comment.

        * CIDLC/ExecutorMappingGenerator.cpp:
        * CIDLC/ExecImplHeaderGenerator.cpp:
        * CIDLC/ServantHeaderGenerator.cpp:

          Added command line option to generate an IDL module that
          encloses the entire executor IDL file, and
          corresponding 'using namespace' declarations in the
          servant and executor impl header files. This change is